--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,9 @@
 
     <!-- 로그인시 보이는 버튼 -->
     <div class="buttonbox"> </div>
+    <table class="mtable">
+
+    </table>
 
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
