11/17 인텔리제이 이용한 게시판

--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -9,11 +9,12 @@
     <form>
         제목 : <input type="text" class="btitle">
         내용 : <input type="text" class="bcontent">
+        첨파: <input type="text" class="bfile">
         <button type="button" onclick="setboard()"> 등록 </button>
     </form>
 
 
     <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script  src="js/board/write.js"></script>
+    <script  src="/js/board/write.js"></script>
 </body>
 </html>
