--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,8 @@
 
 
     <!-- 로그인시 보이는 버튼 -->
-    <div class="buttonbox"> </div>
+    <div class="buttonbox"> </div><br>
+    <a href="/board/list"><button type="button"> 게시판 </button> </a>
     <table class="mtable">
 
     </table>
