--- a/src/main/resources/templates/member/signup.html
+++ b/src/main/resources/templates/member/signup.html
@@ -17,6 +17,7 @@
         </div>
     </div>
 
+    핸드폰 : <input type="mphone" class="mphone"><br>
     비밀번호 : <input type="memail" class="mpassword"><br>
     <button type="button" onclick="setmember()">가입하기</button>
 
