--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -12,6 +12,6 @@
 
 
     <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script  src="js/board/list.js"></script>
+    <script  src="../../js/board/list.js"></script>
 </body>
 </html>
