--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -7,14 +7,14 @@
 <body>
   <h1> 글 쓰기 쓰기 </h1>
     <form>
-        제목 : <input type="text" class="btitle">
-        내용 : <input type="text" class="bcontent">
-        첨파: <input type="text" class="bfile">
+        제목 : <input type="text" class="btitle"> <br>
+        내용 : <input type="text" class="bcontent"><br>
+        첨파: <input type="text" class="bfile"><br>
         <button type="button" onclick="setboard()"> 등록 </button>
     </form>
 
 
     <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script  src="/js/board/write.js"></script>
+    <script  src="../../js/board/write.js"></script>
 </body>
 </html>
