--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -5,11 +5,14 @@
     <title>Title</title>
 </head>
 <body>
-    <a href="/board/write">글쓰기</a>
+    <a href="/board/write">글쓰기[로그인했을때만표시]</a>
     <h1> 글 목록 페이지 </h1>
-    <table class="listtable"> </table>
 
+    <div class="bcategorybox"></div>
 
+    <table class="btable">
+
+    </table>
 
     <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script  src="../../js/board/list.js"></script>
