--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -6,6 +6,9 @@
 </head>
 <body>
   <h1> 글 쓰기 쓰기 </h1>
+
+  <input type="text" class="bcname"> <button type="button" onclick="setbcategory()">카테고리추가</button>
+  <div class="bcategorybox"></div>
     <form>
         제목 : <input type="text" class="btitle"> <br>
         내용 : <input type="text" class="bcontent"><br>
