--- a/src/main/resources/templates/member/signup.html
+++ b/src/main/resources/templates/member/signup.html
@@ -7,18 +7,18 @@
 <body>
 
     <h3> 회원가입 </h3>
+
     <div>
-        이메일 : <input type="meamil" class="meamil"><br>
+        이메일 : <input type="text" class="memail">
         <button type="button" onclick="getauth()" class="getauthbtn">인증코드받기</button><br>
-        <div class=""authbox>
+        <div class="authbox">
             <input type="text" class="authinput">
-            <button type="button" class="authbtn" onclick="authcode()"> 인증 </button>
-            <span class="timerbox"> </span>
+            <button type="button" class="authbtn" onclick="authcode()">인증</button>
+            <span class="timerbox"></span>
         </div>
     </div>
-
-    핸드폰 : <input type="mphone" class="mphone"><br>
-    비밀번호 : <input type="memail" class="mpassword"><br>
+    핸드폰 : <input type="text" class="mphone"><br>
+    비밀번호 : <input type="text" class="mpassword"><br>
     <button type="button" onclick="setmember()">가입하기</button>
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
