11/22 인텔리제이 [과제] 비회원게시판 완료

--- a/src/main/resources/templates/Nonboard/Non_index.html
+++ b/src/main/resources/templates/Nonboard/Non_index.html
@@ -14,12 +14,11 @@
     <div class="c_list"> </div>
 
     <h3> 방문록 쓰기 </h3>
-    <input type="text" class="v_add"><br>
-    <button type="button" class="v_add()"> 방문록 쓰기</button>
+    작성자 : <input type="text" class="vcontent"><br>
+    내용 : <input type="text" class="vname"><br>
+    <button type="button" onclick="v_add()"> 방문록 쓰기</button>
 
-    <h3> 방문록 리스트 </h3>
-    <div class="v_list"> </div>
-
+    <table class="vlist"></table>
 
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script src="../js/Nonboard/Non_index.js"> </script>
