--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -9,10 +9,10 @@
 
   <input type="text" class="bcname"> <button type="button" onclick="setbcategory()">카테고리추가</button>
   <div class="bcategorybox"></div>
-    <form>
-        제목 : <input type="text" class="btitle"> <br>
-        내용 : <input type="text" class="bcontent"><br>
-        첨파: <input type="text" class="bfile"><br>
+    <form class="boardform">
+        제목 : <input type="text" name="btitle"> <br>
+        내용 : <input type="text" name="bcontent"><br>
+        첨파: <input type="file" name="bfile"><br>
         <button type="button" onclick="setboard()"> 등록 </button>
     </form>
 
