--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -7,11 +7,13 @@
 <body>
 
       <h3> 로그인 </h3>
-      이메일 : <input type="text" class="memail"><br>
-      비밀번호 : <input type="text" class="mpassword"><br>
-      <button type="button" onclick="getlogin()">로그인</button>
+      <form method="post" action="/member/getmember">
+          이메일 : <input type="text" name="memail"><br>
+          비밀번호 : <input type="password" name="mpassword"><br>
+          <input type="submit" value="로그인">
+      </form>
 
       <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-      <script src="/js/member/login.js"> </script>
+
 </body>
 </html>
